syntax = "proto3";

option csharp_namespace = "Saas.gRPC";

package Services;

import "Protos/common.proto";
import "Protos/language.proto";
import "Protos/reference.proto";
import "Protos/administrator.proto";

service RestaurantSvc {
  rpc Get (Common.MsgInt) returns (Administrator.Restaurant);
  rpc Lookup (Common.MsgString) returns (Administrator.Restaurants);
  rpc Create (Administrator.Restaurant) returns (Common.MsgInt);
  rpc Update (Administrator.Restaurant) returns (Common.MsgBool);
  rpc Delete (Common.MsgInt) returns (Common.MsgBool);
}
service TableSvc {
  rpc Get (Common.MsgInt) returns (Administrator.Table);
  rpc GetByRestaurant (Common.MsgInt) returns (Administrator.Tables);
  rpc Create (Administrator.Table) returns (Common.MsgInt);
  rpc Update (Administrator.Table) returns (Common.MsgBool);
  rpc Delete (Common.MsgInt) returns (Common.MsgBool);  
}
service ItemSvc {
  rpc Get (Common.MsgInt) returns (Administrator.Item);
  rpc GetByRestaurant (Common.MsgInt) returns (Administrator.Items);
  rpc GetByRestaurantMenu (Common.MsgInt) returns (Administrator.Items);
  rpc Create (Administrator.Item) returns (Common.MsgInt);
  rpc Update (Administrator.Item) returns (Common.MsgBool);
}
service RestaurantMenuSvc {
  rpc Get (Common.MsgInt) returns (Administrator.RestaurantMenu);
  rpc GetByRestaurant (Common.MsgInt) returns (Administrator.RestaurantMenus);
  rpc Create (Administrator.RestaurantMenu) returns (Common.MsgInt);
  rpc Update (Administrator.RestaurantMenu) returns (Common.MsgInt);
  rpc Delete (Common.MsgInt) returns (Common.MsgInt);
}
service MenuSvc {
  rpc Get (Common.MsgInt) returns (Administrator.Menu);
  rpc GetByRestaurantMenu (Common.MsgInt) returns (Administrator.Menus);
  rpc GetByRestaurant (Common.MsgInt) returns (Administrator.Menus);
  rpc Create (Administrator.Menu) returns (Common.MsgInt);
  rpc Update (Administrator.Menu) returns (Common.MsgInt);
  rpc Delete (Common.MsgInt) returns (Common.MsgInt);
}
service MenuItemSvc {
  rpc Get (Common.MsgInt) returns (Administrator.MenuItem);  
  rpc GetByMenu (Common.MsgInt) returns (Administrator.MenuItems);
  rpc GetByItem (Common.MsgInt) returns (Administrator.MenuItems);
  rpc GetByMenuAndItem (Administrator.MenuItemIds) returns (Administrator.MenuItem);
  rpc Create (Administrator.MenuItem) returns (Common.MsgInt);
  rpc Delete (Common.MsgInt) returns (Common.MsgInt);
}
service AppDataSvc {
	rpc SupportedLanguages (Common.MsgEmpty) returns (Language.SupportedLanguages);
  rpc States (Common.MsgEmpty) returns (Reference.States);
  rpc KeyTypes (Common.MsgEmpty) returns (Reference.KeyTypes);
  rpc References (Common.MsgEmpty) returns (Reference.References);
  rpc Dictionary (Language.CodeLanguage) returns (Language.Dictionary);
}